--- a/tests/performance-0.html
+++ b/tests/performance-0.html
@@ -39,36 +39,49 @@
 		<div id="main">
                     <h1>Testing heatmap.js performance for improving its rendering process</h1>
 		    <div id="heatmapArea">
-			
+
 		    </div>
                     <div id="result"></div>
 		</div>
 		<script type="text/javascript" src="../src/heatmap.js"></script>
-                <script type="text/javascript" src="data.js"></script>
 		<script type="text/javascript">
-	
-	
+
+
 		window.onload = function(){
-                    
-                    var data = window.data["1000dp"],
+
+                    var data = [],
                         start = +new Date,
-                        heatmapInstance;
-                        
+                        heatmapInstance,
+                        i, j,
+                        width = 1000,
+                        height = 600;
+
                     heatmapInstance = h337.create({
-                        "element":document.getElementById("heatmapArea"), 
-                        "radius":25,
-                        "visible":true,
-                        "legend": {
-                            "title": "Mouse Events",
-                            "position": "bl",
-                            "offset": 10
-                        }
+                        // "debug": true,
+                        "width": width,
+                        "height": height,
+                        "radius": 10,
                     });
 
-                    heatmapInstance.store.setDataSet(data);    
-                    document.getElementById("result").innerHTML = "Creating the heatmap and rendering it took " + (((+new Date)-start)+'ms for ' + data.data.length + ' datapoints');
+                    for (i = 0; i < width; i = i + 10)
+                      for (j = 0; j < height; j = j + 10) {
+                        data.push({
+                          x: i + 5,
+                          y: j + 5,
+                          count: parseInt(Math.random() * 1000)
+                        });
+                      }
+
+                    document.getElementById("heatmapArea").appendChild(heatmapInstance.get("canvas"));
+
+                    heatmapInstance.store.setDataSet({
+                      max: 1000,
+                      data: data
+                    });
+
+                    document.getElementById("result").innerHTML = "Creating the heatmap and rendering it took " + (((+new Date)-start)+'ms for ' + data.length + ' datapoints');
                 };
-		
+
 		</script>
 	</body>
 </html>
